--- a/lireddit-server/package.json
+++ b/lireddit-server/package.json
@@ -22,6 +22,13 @@
     "pg": "^8.7.1",
     "typescript": "^4.5.2"
   },
+  "mikro-orm": {
+    "useTsNode": true,
+    "configPaths": [
+      "./src/mikro-orm.config.ts",
+      "./dist/mikro-orm.config.js"
+    ]
+  },
   "devDependencies": {
     "ts-node": "^10.4.0"
   }
