--- a/lireddit-server/package.json
+++ b/lireddit-server/package.json
@@ -18,8 +18,10 @@
     "@mikro-orm/migrations": "^4.5.9",
     "@mikro-orm/postgresql": "^4.5.9",
     "@types/node": "^16.11.11",
+    "apollo-server-express": "^3.6.1",
     "nodemon": "^2.0.15",
     "pg": "^8.7.1",
+    "type-graphql": "^1.1.1",
     "typescript": "^4.5.2"
   },
   "mikro-orm": {
@@ -30,6 +32,7 @@
     ]
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "ts-node": "^10.4.0"
   }
 }
