--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "watch": "tsc -w",
     "dev": "nodemon dist/index.js",
     "start": "node dist/index.js",
-    "start2": "ts-node src/index.ts"
+    "start2": "ts-node src/index.ts",
+    "migrate": "mikro-orm migration:create"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +20,7 @@
     "@mikro-orm/postgresql": "^4.5.9",
     "@types/node": "^16.11.11",
     "apollo-server-express": "^3.6.1",
+    "argon2": "^0.28.4",
     "nodemon": "^2.0.15",
     "pg": "^8.7.1",
     "type-graphql": "^1.1.1",
