--- a/package.json
+++ b/package.json
@@ -21,8 +21,13 @@
     "@types/node": "^16.11.11",
     "apollo-server-express": "^3.6.1",
     "argon2": "^0.28.4",
+    "connect-redis": "^6.1.1",
+    "cors": "^2.8.5",
+    "express-session": "^1.17.2",
+    "graphql-playground-middleware-express": "^1.7.23",
     "nodemon": "^2.0.15",
     "pg": "^8.7.1",
+    "redis": "^4.0.4",
     "type-graphql": "^1.1.1",
     "typescript": "^4.5.2"
   },
@@ -34,7 +39,9 @@
     ]
   },
   "devDependencies": {
+    "@types/connect-redis": "^0.0.18",
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.4",
     "ts-node": "^10.4.0"
   }
 }
